# LearnLLMSyntheticDataGen

./: .gitignore  Makefile  README.md  pyproject.toml
myapp/: app.py
myapp/data/: user_behaviors_data.json  user_interactions_data.json  user_profiles_data.json
myapp/data/llm_interaction_scripts/: test_script.py  user_interactions_script_0.py  user_interactions_script_1.py  user_interactions_script_10.py  user_interactions_script_100.py  user_interactions_script_11.py  user_interactions_script_12.py  user_interactions_script_13.py  user_interactions_script_14.py  user_interactions_script_15.py  user_interactions_script_16.py  user_interactions_script_17.py  user_interactions_script_18.py  user_interactions_script_19.py  user_interactions_script_2.py  user_interactions_script_20.py  user_interactions_script_21.py  user_interactions_script_22.py  user_interactions_script_23.py  user_interactions_script_24.py  user_interactions_script_25.py  user_interactions_script_26.py  user_interactions_script_27.py  user_interactions_script_28.py  user_interactions_script_29.py  user_interactions_script_3.py  user_interactions_script_30.py  user_interactions_script_31.py  user_interactions_script_32.py  user_interactions_script_33.py  user_interactions_script_34.py  user_interactions_script_35.py  user_interactions_script_36.py  user_interactions_script_37.py  user_interactions_script_38.py  (+67 more)
myapp/scripts/: openai-test.py  webdriver_tester.py  webdriver_tester_2.py
myapp/templates/: index.html
myapp/utils/: batch_utils.py  file_utils.py  prompt_utils.py
(+6 files in other folders)
